Updated HL code, Changed to new override on PresLayerBase

--- a/DragonpunkCoOp/DragonpunkCoOp/Config/XComEngine.ini
+++ b/DragonpunkCoOp/DragonpunkCoOp/Config/XComEngine.ini
@@ -1,2 +1,6 @@
 [Engine.ScriptPackages]
 +NonNativePackages=Dragonpunk_CoOp
+
+[Engine.Engine]
++ModClassOverrides=(BaseGameClass="XComPresentationLayerBase", ModClass="Dragonpunk_CoOp.XComPresentationLayerBase_CoOp_Override") 
+
