--- a/DragonpunkCoOp/DragonpunkCoOp/Config/XComEngine.ini
+++ b/DragonpunkCoOp/DragonpunkCoOp/Config/XComEngine.ini
@@ -2,5 +2,5 @@
 +NonNativePackages=Dragonpunk_CoOp
 
 [Engine.Engine]
-+ModClassOverrides=(BaseGameClass="XComPresentationLayerBase", ModClass="Dragonpunk_CoOp.XComPresentationLayerBase_CoOp_Override") 
+;+ModClassOverrides=(BaseGameClass="XComPresentationLayerBase", ModClass="Dragonpunk_CoOp.XComPresentationLayerBase_CoOp_Override") 
 
