--- a/DragonpunkCoOp/DragonpunkCoOp/Config/XComEngine.ini
+++ b/DragonpunkCoOp/DragonpunkCoOp/Config/XComEngine.ini
@@ -4,3 +4,7 @@
 [Engine.Engine]
 ;+ModClassOverrides=(BaseGameClass="XComPresentationLayerBase", ModClass="Dragonpunk_CoOp.XComPresentationLayerBase_CoOp_Override") 
 
+[IpDrv.TcpNetDriver]
+ConnectionTimeout=600.0
+InitialConnectTimeout=600.0
+ProblemConnectTime=10.0
